Applications/Radarr/namespace-radarr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: radarr
  labels:
    app: radarr
