Applications/Radarr/svc-radarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-radarr
  namespace: radarr
  labels:
    app: radarr
spec:
  selector:
    app: radarr
  ports:
    - port: 80
      targetPort: 7878
