Applications/Radarr/ingress-radarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-radarr
  namespace: radarr
spec:
  rules:
    - host: radarr.home
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: svc-radarr
                port:
                  number: 80
